@@ -9,6 +9,11 @@ Version 0.4f2
 -------------
 * Possible fix for the Bulltower party wipe bug. Get back to me if people still have problems.
 * Layla can no longer be a courtesan until you have taught her they ways of sex.
+* Added a series of events to the outlaws. They have rather specific entry requirements, and allow you a new way to get a visa into Rigard.
+ - Get 10 rel with the outlaws (help out Aquilius)
+ - Talk to Maria, wait for a few days, then return to the camp
+ - You should be approached to take on a more important mission...
+* In order to account for these new set of scenes, the Bull Tower scenes have been locked until you finish these. In addition, you need to help out the outlaws to a greater extent.
 
 --------------------------------------------
              PREVIOUS VERSIONS
